Cleanup, remove G1GC